text alignment bug fixed in header section

--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ h1 {
     font-size: 50px;
 }
 
+#header p{
+    text-align: justify;
+}
+
 .header-content img {
     width: 100%;
     margin-top: 5px;
